VDR Plugin 'streamdev' Revision History
---------------------------------------
 
- return value of streamdev-clients cDevice::NumProvidedSystems() now
  configurable in plugin setup

2011-02-11: Version 0.5.1

- updated copy of GetClippedNumProvidedSystems to the version used since
  VDR 1.7.15 (reported by carel@vdrportal)
- fixed the code deciding if a device is in use for live TV or not. It did
  not work as expected for FF cards (reported by wtor@vdrportal)
- increased client side timeout for TUNE command
- more dsyslog messages to help troubleshouting channel switch issues
- improved the channel switch code trying to move live TV to different card
- make sure that a client doesn't interrupt replaying on server's FF card
  (reported by wtor@vdrportal)
- switching away live TV failed even when "always suspended" (reported by
  Michal Novotny)
- fixed regression: no receiver created for ES/PS/PES (reported by Gavin
  Hamill)
- VTP no longer uses a static priority value for its server-side receivers.
  The server stores channel and priority requested with the PROV command and
  re-uses these values in a subsequent TUNE for the same channel. The new
  PRIO command is used to update the receiver's priority if necessary.
- added parameter HEIGHT to externremux.sh
- fixed syslog messages reporting local instead of remote IP and port
- fixed regression of the GetDevice(...) change. Filter streaming to clients
  with a recent VDR version no longer worked.
- log an error if externremux.sh is missing or not executable
- since VDR 1.5.0 cDevice::GetDevice(...) is no longer a query only method.
  It detaches all receivers of the device it returns. So it is no longer
  suitable for testing the availability of a device. Added a copy of VDR's
  cDevice::GetDevice(...) without the detach receivers part as a workaround
  until a better solution is available
- added dsyslog messages to help troubleshouting channel switch issues